# backend/generated/flask-server/openapi_server/models/sku_risk_level.py
@@ -1,0 +1,41 @@
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from openapi_server.models.base_model import Model
+from openapi_server import util
+
+
+class SkuRiskLevel(Model):
+    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+
+    Do not edit the class manually.
+    """
+
+    """
+    allowed enum values
+    """
+    CRITICAL = 'critical'
+    HIGH = 'high'
+    MEDIUM = 'medium'
+    LOW = 'low'
+    def __init__(self):  # noqa: E501
+        """SkuRiskLevel - a model defined in OpenAPI
+
+        """
+        self.openapi_types = {
+        }
+
+        self.attribute_map = {
+        }
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'SkuRiskLevel':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The SkuRiskLevel of this SkuRiskLevel.  # noqa: E501
+        :rtype: SkuRiskLevel
+        """
+        return util.deserialize_model(dikt, cls)
