# backend/generated/flask-server/openapi_server/models/update_sku_request.py
@@ -4,9 +4,11 @@ from typing import List, Dict  # noqa: F401
 
 from openapi_server.models.base_model import Model
 from openapi_server.models.master_status import MasterStatus
+from openapi_server.models.sku_risk_level import SkuRiskLevel
 from openapi_server import util
 
 from openapi_server.models.master_status import MasterStatus  # noqa: E501
+from openapi_server.models.sku_risk_level import SkuRiskLevel  # noqa: E501
 
 class UpdateSkuRequest(Model):
     """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
@@ -14,7 +16,7 @@ class UpdateSkuRequest(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, sku_code=None, name=None, description=None, unit_of_measure=None, status=None):  # noqa: E501
+    def __init__(self, sku_code=None, name=None, description=None, unit_of_measure=None, status=None, risk_score=None, risk_level=None, category=None, supplier_ids=None):  # noqa: E501
         """UpdateSkuRequest - a model defined in OpenAPI
 
         :param sku_code: The sku_code of this UpdateSkuRequest.  # noqa: E501
@@ -27,13 +29,25 @@ class UpdateSkuRequest(Model):
         :type unit_of_measure: str
         :param status: The status of this UpdateSkuRequest.  # noqa: E501
         :type status: MasterStatus
+        :param risk_score: The risk_score of this UpdateSkuRequest.  # noqa: E501
+        :type risk_score: int
+        :param risk_level: The risk_level of this UpdateSkuRequest.  # noqa: E501
+        :type risk_level: SkuRiskLevel
+        :param category: The category of this UpdateSkuRequest.  # noqa: E501
+        :type category: str
+        :param supplier_ids: The supplier_ids of this UpdateSkuRequest.  # noqa: E501
+        :type supplier_ids: List[str]
         """
         self.openapi_types = {
             'sku_code': str,
             'name': str,
             'description': str,
             'unit_of_measure': str,
-            'status': MasterStatus
+            'status': MasterStatus,
+            'risk_score': int,
+            'risk_level': SkuRiskLevel,
+            'category': str,
+            'supplier_ids': List[str]
         }
 
         self.attribute_map = {
@@ -41,7 +55,11 @@ class UpdateSkuRequest(Model):
             'name': 'name',
             'description': 'description',
             'unit_of_measure': 'unit_of_measure',
-            'status': 'status'
+            'status': 'status',
+            'risk_score': 'risk_score',
+            'risk_level': 'risk_level',
+            'category': 'category',
+            'supplier_ids': 'supplier_ids'
         }
 
         self._sku_code = sku_code
@@ -49,6 +67,10 @@ class UpdateSkuRequest(Model):
         self._description = description
         self._unit_of_measure = unit_of_measure
         self._status = status
+        self._risk_score = risk_score
+        self._risk_level = risk_level
+        self._category = category
+        self._supplier_ids = supplier_ids
 
     @classmethod
     def from_dict(cls, dikt) -> 'UpdateSkuRequest':
@@ -165,3 +187,91 @@ class UpdateSkuRequest(Model):
         """
 
         self._status = status
+
+    @property
+    def risk_score(self) -> int:
+        """Gets the risk_score of this UpdateSkuRequest.
+
+
+        :return: The risk_score of this UpdateSkuRequest.
+        :rtype: int
+        """
+        return self._risk_score
+
+    @risk_score.setter
+    def risk_score(self, risk_score: int):
+        """Sets the risk_score of this UpdateSkuRequest.
+
+
+        :param risk_score: The risk_score of this UpdateSkuRequest.
+        :type risk_score: int
+        """
+        if risk_score is not None and risk_score > 100:  # noqa: E501
+            raise ValueError("Invalid value for `risk_score`, must be a value less than or equal to `100`")  # noqa: E501
+        if risk_score is not None and risk_score < 0:  # noqa: E501
+            raise ValueError("Invalid value for `risk_score`, must be a value greater than or equal to `0`")  # noqa: E501
+
+        self._risk_score = risk_score
+
+    @property
+    def risk_level(self) -> SkuRiskLevel:
+        """Gets the risk_level of this UpdateSkuRequest.
+
+
+        :return: The risk_level of this UpdateSkuRequest.
+        :rtype: SkuRiskLevel
+        """
+        return self._risk_level
+
+    @risk_level.setter
+    def risk_level(self, risk_level: SkuRiskLevel):
+        """Sets the risk_level of this UpdateSkuRequest.
+
+
+        :param risk_level: The risk_level of this UpdateSkuRequest.
+        :type risk_level: SkuRiskLevel
+        """
+
+        self._risk_level = risk_level
+
+    @property
+    def category(self) -> str:
+        """Gets the category of this UpdateSkuRequest.
+
+
+        :return: The category of this UpdateSkuRequest.
+        :rtype: str
+        """
+        return self._category
+
+    @category.setter
+    def category(self, category: str):
+        """Sets the category of this UpdateSkuRequest.
+
+
+        :param category: The category of this UpdateSkuRequest.
+        :type category: str
+        """
+
+        self._category = category
+
+    @property
+    def supplier_ids(self) -> List[str]:
+        """Gets the supplier_ids of this UpdateSkuRequest.
+
+
+        :return: The supplier_ids of this UpdateSkuRequest.
+        :rtype: List[str]
+        """
+        return self._supplier_ids
+
+    @supplier_ids.setter
+    def supplier_ids(self, supplier_ids: List[str]):
+        """Sets the supplier_ids of this UpdateSkuRequest.
+
+
+        :param supplier_ids: The supplier_ids of this UpdateSkuRequest.
+        :type supplier_ids: List[str]
+        """
+
+        self._supplier_ids = supplier_ids
